# lv2-plugin-components

./: .gitmodules  CMakeLists.txt  README.md  compile_commands.json
docs/: architecture.md
src/: main.cpp  plugin.hpp
src/config/: BasicFilter_config.hpp  Oscillator_config.hpp  Template_config.hpp
src/containers/: RTMap.hpp
src/io/: Buffer.hpp  ConnectionManager.hpp
src/midi/: KeyboardController.cpp  KeyboardController.hpp  KeyboardObserver.cpp  KeyboardObserver.hpp  Note.cpp  Note.hpp
src/modules/: Module.hpp  ModuleType.hpp
src/modules/Oscillator/: Oscillator.cpp  Oscillator.hpp  Waveform.hpp  Wavetable.cpp  Wavetable.hpp
src/params/: Parameter.cpp  Parameter.hpp  ParameterController.cpp  ParameterController.hpp  ParameterObserver.hpp  ParameterType.hpp
src/plugins/: BasicFilter.cpp  BasicFilter.hpp  LV2Plugin.cpp  LV2Plugin.hpp  Oscillator.cpp  Oscillator.hpp  PluginResources.hpp
